--- a/src/screen/home/style.scss
+++ b/src/screen/home/style.scss
@@ -1,7 +1,15 @@
 ._home {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
         #414141;
-    color: #fcfcfd;
+    color: #fcfcfd !important;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: #fcfcfd !important;
+    }
     padding: 80px 0 0;
 
     // .home-content {
@@ -39,6 +47,7 @@
                 justify-content: center;
                 align-items: center;
                 padding: 4px 12px;
+                z-index: 1;
             }
             .item-name {
                 margin: 12px 10px;
@@ -52,11 +61,28 @@
                 }
             }
             .image {
+                position: relative;
                 margin: 0 10px;
                 overflow: hidden;
                 border-radius: 12px;
+                width: 352px;
+                height: 164px;
+                img {
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
+                .photo {
+                    position: absolute;
+                    left: 10px;
+                    bottom: 10px;
+                    width: 80px;
+                    height: 80px;
+                    border-radius: 12px;
+                    cursor: pointer;
+                }
             }
-            .bcmc {
+            .symbol {
                 font-weight: 700;
                 font-size: 16px;
                 line-height: 150%;
@@ -109,17 +135,50 @@
         border-radius: 4px;
         cursor: pointer;
     }
+    .max-second-tx {
+        overflow: hidden;
+        .detail {
+            width: min-content;
+            margin: auto;
+        }
+        margin-top: 50px;
+        h1 {
+            font-size: 48px;
+            font-weight: 700;
+        }
+        h3 {
+            font-size: 24px;
+            font-weight: 700;
+        }
+        h3,
+        p {
+            white-space: nowrap;
+        }
+    }
 }
 ._form-filter {
+    max-width: 1760px;
     margin: 50px auto 0;
     padding: 0 32px;
     display: flex;
-    justify-content: end;
-    input {
-        margin: 0 5px;
+    justify-content: flex-end;
+    flex-direction: column;
+    .input {
+        input {
+            margin: 0 5px;
+        }
     }
+    .sliders {
+        .slider {
+            max-width: 800px;
+        }
+    }
+
     button {
         cursor: pointer;
+    }
+    .submit-btn {
+        font-size: 20px;
     }
 }
 .footer {
@@ -147,19 +206,41 @@
     ._form-filter {
         max-width: 500px !important;
     }
+    ._item {
+        margin: 30px auto !important;
+    }
     ._form-filter {
-        flex-direction: column;
+        .input,
+        .slider {
+            flex-direction: column;
+        }
         input {
             margin-top: 5px;
         }
         .submit-btn {
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             padding: 0 5px;
         }
         button {
             margin-top: 10px;
         }
     }
-    // }
+    .max-second-tx {
+        h1 {
+            font-size: 24px !important;
+            font-weight: 500 !important;
+        }
+        h3 {
+            font-size: inherit !important;
+            font-weight: 500 !important;
+        }
+        h3,
+        p {
+            white-space: normal !important;
+        }
+    }
+    .moneys {
+        flex-direction: column;
+    }
 }
