--- a/src/style/index.css
+++ b/src/style/index.css
@@ -415,6 +415,13 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
 .block {
   display: block;
 }
